--- a/scenarioT/weather/canada_e.html
+++ b/scenarioT/weather/canada_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -24,6 +23,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="./wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -109,7 +109,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li><li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../weather/en.html">Home</a></li><li><a href="../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../weather/index_e.html">Weather information</a></li><li><a href="../weather/mainmenu/weather_menu_e.html">Weather</a></li>
 		</ol>
 	</div>
 </div>
@@ -172,7 +172,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		 <area href="/city/pages/mb-38_metric_e.html" title="Winnipeg" alt="Winnipeg" shape="poly" coords="245,415,245,411,259,411,260,418,274,418,274,432,259,432,259,439,280,439,280,468,252,471,246,447,242,440,242,429,228,429,228,415" />
 		 <area href="/forecast/canada/index_e.html?id=MB" title="Manitoba" alt="Manitoba" shape="poly" coords="228,300,224,342,221,423,266,426,266,381,305,338,291,329,284,331,277,314,270,315,270,303" />
 
-		 <area href="/weather/city/pages/on-118_metric_e.html" title="Ottawa" alt="Ottawa" shape="poly" coords="417,445,428,445,431,453,442,453,442,463,427,463,427,474,462,474,462,508,420,508,417,480,414,463,406,463,406,449" />
+		 <area href="../weather/city/pages/on-118_metric_e.html" title="Ottawa" alt="Ottawa" shape="poly" coords="417,445,428,445,431,453,442,453,442,463,427,463,427,474,462,474,462,508,420,508,417,480,414,463,406,463,406,449" />
 		 <area href="/city/pages/on-100_metric_e.html" title="Thunder Bay" alt="Thunder Bay" shape="poly" coords="304,437,318,437,319,430,361,430,361,416,333,416,333,406,360,405,360,374,325,374,319,405,318,419,298,416" />
 		 <area href="/city/pages/on-143_metric_e.html" title="Toronto" alt="Toronto" shape="poly" coords="354,465,354,479,358,493,358,517,392,518,392,482,403,482,403,465" />
 		 <area href="/forecast/canada/index_e.html?id=ON" title="Ontario" alt="Ontario" shape="poly" coords="305,337,266,382,263,424,295,438,315,438,319,427,333,435,343,438,350,452,372,459,375,480,371,497,385,490,403,483,400,473,413,469,438,449,428,442,414,452,410,445,396,442,385,431,378,389,361,382,368,372,351,368,351,350,333,351" />
@@ -195,18 +195,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		</map>
 <div class="row">
 	<div class="col-md-8">
- 		<img src="/weather/data/wxoimages/wocanmap0_e.jpg" class="thumbnail center-block img-responsive wxo-pddng-sm"  usemap="#FPMap1" alt="map of Canada"/>	
+ 		<img src="../weather/data/wxoimages/wocanmap0_e.jpg" class="thumbnail center-block img-responsive wxo-pddng-sm"  usemap="#FPMap1" alt="map of Canada"/>	
 	</div>
 	<aside class="col-md-4 hidden-xs hidden-sm">
    	<div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="/weather/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/weather/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+		<li><a href="../weather/canada_e.html">Canadian Weather</a></li>
+		<li><a href="../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../weather/radar/index_e.html">Radar - Canada</a></li>
 		<li><a href="/weather/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/weather/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="../weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/weather/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
@@ -285,7 +285,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <tr>
 <td><a href='/city/pages/qc-147_metric_e.html'>Montréal</a></td><td>Partly Cloudy</td><td>18&deg;C</td></tr>
 <tr>
-<td><a href='/weather/city/pages/on-118_metric_e.html'>Ottawa (Kanata - Orléans)</a></td><td>Risk of thunderstorms</td><td>17&deg;C</td></tr>
+<td><a href='../weather/city/pages/on-118_metric_e.html'>Ottawa (Kanata - Orléans)</a></td><td>Risk of thunderstorms</td><td>17&deg;C</td></tr>
 <tr>
 <td><a href='/city/pages/bc-79_metric_e.html'>Prince George</a></td><td></td><td>11&deg;C</td></tr>
 <tr>
@@ -331,10 +331,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -343,8 +343,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
