--- a/scenarioT/weather/index_e.html
+++ b/scenarioT/weather/index_e.html
@@ -1,8 +1,7 @@
 <!-- HI -->
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -27,6 +26,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <![endif]-->
+
 <noscript><link rel="stylesheet" href="./wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -120,14 +120,14 @@ h2, .h1 {
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../weather/en.html">Home</a></li><li><a href="../weather/services/environment.html">Environment and natural resources</a></li>
 		</ol>
 	</div>
 </div>
 	</nav>
 </header>
 
-     <aside class="prm-flpr visible-xs visible-sm">
+   <aside class="prm-flpr visible-xs visible-sm">
             <div class="container">
                 <div class="row">
                      <h2 class="wb-inv">Weather Information</h2>
@@ -144,31 +144,31 @@ h2, .h1 {
                         </ul>
                         <div role="tabpanel" id="tab1" class="in fade">
                            <figure>
-                              <a href="/canada_e.html">
+                              <a href="../weather/canada_e.html">
 											<img src="./data/wxoimages/homeCurrent_750x223_e.png" alt="">
 										</a>
                               <figcaption>
-                                	<p><a href="/canada_e.html">Current Conditions</a></p>
+                                	<p><a href="../canada_e.html">Current Conditions</a></p>
                               </figcaption>
                            </figure>
                         </div>
                         <div role="tabpanel" id="tab2" class="out fade">
                            <figure>
-                              <a href="/warnings/index_e.html">
+                              <a href="../weather/warnings/index_e.html">
 											<img src="./data/wxoimages/homeAlert_750x223_e.png" alt="">
 										</a>
                               <figcaption>
-                                 <p><a href="/warnings/index_e.html" class="learnmore"> Public Alerts </a></p>
+                                 <p><a href="../weather/warnings/index_e.html" class="learnmore"> Public Alerts </a></p>
                               </figcaption>
                            </figure>
                         </div>
                         <div role="tabpanel" id="tab3" class="out fade">
                            <figure>
-                              <a href="/radar/index_e.html">
+                              <a href="../weather/radar/index_e.html">
 											<img alt="Canadian Weather RADAR" src="./data/wxoimages/homeRadar_750x223.png">
 										</a>
                               <figcaption>
-                                 <p><a href="/radar/index_e.html"> Radar </a></p>
+                                 <p><a href="../weather/radar/index_e.html"> Radar </a></p>
                               </figcaption>
                            </figure>
                         </div>
@@ -198,22 +198,21 @@ h2, .h1 {
                   </div>
                </div>
             </aside>
-        
             <aside class="prm-flpr visible-md visible-lg">
                 <div class="container">
                     <h2 class="wb-inv">Weather Information</h2>
                   <div class="row">
                         <ul id="iconmenu">
-                            <li id="panel1c"><a href="/canada_e.html"><span class="wb-inv">Current Conditions</span></a></li>
-                            <li id="panel2c"><a href="/warnings/index_e.html"><span class="wb-inv">Public Alerts</span></a></li>
-                            <li id="panel3c"><a href="/radar/index_e.html"><span class="wb-inv">Radar</span></a></li>
+                            <li id="panel1c"><a href="../weather/canada_e.html"><span class="wb-inv">Current Conditions</span></a></li>
+                            <li id="panel2c"><a href="../weather/warnings/index_e.html"><span class="wb-inv">Public Alerts</span></a></li>
+                            <li id="panel3c"><a href="../weather/radar/index_e.html"><span class="wb-inv">Radar</span></a></li>
                             <li id="panel4c"><a href="/satellite/index_e.html"><span class="wb-inv">Satellite</span></a></li>
 									                             <li id="panel5c"><a href="/jet_stream/index_e.html"><span class="wb-inv">Jet Stream</span></a></li>
 								 	                         </ul>
                         <ul aria-hidden="true" id="linkmenu">
-                            <li id="panel1e"><a href="/canada_e.html">Current Conditions</a></li>
-                            <li id="panel2e"><a href="/warnings/index_e.html">Public Alerts</a></li>
-                            <li id="panel3e"><a href="/radar/index_e.html">Radar</a></li>
+                            <li id="panel1e"><a href="../weather/canada_e.html">Current Conditions</a></li>
+                            <li id="panel2e"><a href="../weather/warnings/index_e.html">Public Alerts</a></li>
+                            <li id="panel3e"><a href="../weather/radar/index_e.html">Radar</a></li>
                             <li id="panel4e"><a href="/satellite/index_e.html">Satellite</a></li>
 									                             <li id="panel5e"><a href="/jet_stream/index_e.html">Jet Stream</a></li>
 								 	                         </ul>
@@ -252,7 +251,7 @@ h2, .h1 {
 	</div>
 <div class="wb-eqht row">
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></h3>
+			<h3><a href="../weather/mainmenu/weather_menu_e.html">Weather</a></h3>
 			<p>Get the latest weather, 24hr detailed forecast and seven day forecast for locations across Canada. Plus, view local radar and satellite imagery.</p>
 			<details id="gps-jq">
 			<summary>Use Current Location</summary>
@@ -260,7 +259,7 @@ h2, .h1 {
 			</details>
 		</section>
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/weather/mainmenu/alert_menu_e.html">Alerts</a></h3>
+			<h3><a href="../weather/mainmenu/alert_menu_e.html">Alerts</a></h3>
 			<p>Get current weather alerts across Canada from the Authoritative Source of Weather Alerts 24/7; Environment Canada. Read about the latest events in our weather summaries. Know the risk of lightning strikes with our lightning danger maps. Track hurricanes in motion.</p>
 		</section>
 		<div class="clearfix visible-md"></div>	
@@ -270,7 +269,7 @@ h2, .h1 {
 		</section>
 		<div class="clearfix visible-lg"></div>
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality</a></h3>
+			<h3><a href="../weather/mainmenu/airquality_menu_e.html">Air Quality</a></h3>
 			<p>Find the latest local air quality forecasts and information.</p>
 		</section>
 		<div class="clearfix visible-md"></div>	
@@ -296,11 +295,11 @@ h2, .h1 {
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -309,8 +308,8 @@ h2, .h1 {
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
