fixing links and anims
fixing links and anims

--- a/scenarioT/weather/lightning/ONT-index_e.html
+++ b/scenarioT/weather/lightning/ONT-index_e.html
@@ -142,9 +142,9 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
-<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
-<li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Alerts</a></li>
+<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../../weather/index_e.html">Weather information</a></li>
+<li><a href="../../weather/warnings/ottawa-report_e.html">Alerts</a></li>
 		</ol>
 	</div>
 </div>
@@ -182,9 +182,9 @@
 <a id="mapTop"></a>
 
 <div class="wrapper">
-	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../data/lightning_images/lightningONT/lightningONT_7.png" data-wxo-label-0="#1" data-wxo-anim-1="../data/lightning_images/lightning_images/lightningONT/lightningONT_1.png" data-wxo-label-1="#2" data-wxo-anim-2="../data/lightning_images/lightningONT/lightningONT_2.png" data-wxo-label-2="#3" data-wxo-anim-3="../data/lightning_images/lightningONT/lightningONT_3.png" data-wxo-label-3="#4" data-wxo-anim-4="../data/lightning_images/lightningONT/lightningONT_4.png" data-wxo-label-4="#5" data-wxo-anim-5="../data/lightning_images/lightningONT/lightningONT_5.png" data-wxo-label-5="#6" data-wxo-anim-6="../data/lightning_images/lightningONT/lightningONT_6.png" data-wxo-label-6="#7"  >
+	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../../weather/data/lightning_images/lightningONT/lightningONT_7.png" data-wxo-label-0="#1" data-wxo-anim-1="../../weather/data/lightning_images/lightning_images/lightningONT/lightningONT_1.png" data-wxo-label-1="#2" data-wxo-anim-2="../../weather/data/lightning_images/lightningONT/lightningONT_2.png" data-wxo-label-2="#3" data-wxo-anim-3="../../weather/data/lightning_images/lightningONT/lightningONT_3.png" data-wxo-label-3="#4" data-wxo-anim-4="../../weather/data/lightning_images/lightningONT/lightningONT_4.png" data-wxo-label-4="#5" data-wxo-anim-5="../../weather/data/lightning_images/lightningONT/lightningONT_5.png" data-wxo-label-5="#6" data-wxo-anim-6="../../weather/data/lightning_images/lightningONT/lightningONT_6.png" data-wxo-label-6="#7"  >
     <div id="wxo-carousel-ie8" class="wxo-ie8-show">
-        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="../data/lightning_images/lightningONT/lightningONT_7.png">
+        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="../../weather/data/lightning_images/lightningONT/lightningONT_7.png">
     </div>
     <div id="wxo-carousel" class="wxo-ie8-hide">
     	<p class="wxo-loading-msg text-center mrgn-tp-lg mrgn-bttm-lg">Loading images...</p>
@@ -257,9 +257,9 @@
 		<div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+		<li><a href="../../canada_e.html">Canadian Weather</a></li>
+		<li><a href="../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
 		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
@@ -272,7 +272,7 @@
 </div>
 <div class="row mrgn-bttm-lg mrgn-lft-sm mrgn-rght-sm">
 <div class="col-md-12 hidden-xs nat-link">
-<p class="text-center"><a title="National Lightning Map" href="index_e.html?id=NAT#mapTop" >Lightning - Canada</a></p>
+<p class="text-center"><a title="National Lightning Map" href="../../weather/lightning/index_e.html"" >Lightning - Canada</a></p>
 </div>
 <div class="hidden-xs text-center">
 	<div class="col-sm-2 col-xs-4 nat-container-1"><a id="arctic" title="Arctic Lightning Map" href="index_e.html?id=ARC#mapTop">Arctic</a></div>
@@ -379,8 +379,8 @@
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
@@ -392,8 +392,8 @@
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
