--- a/scenarioT/weather/warnings/index_e.html
+++ b/scenarioT/weather/warnings/index_e.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
+<!--<![endif]--><head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -11,8 +10,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="/weather/GCWeb/css/theme.min.css">
+<link href="../../weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="../../weather/GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
@@ -22,8 +21,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
-	<script src="/weather/cacheable/js/radar/Animator.js"></script>
-<noscript><link rel="stylesheet" href="/weather/wet-boew/css/noscript.min.css" /></noscript>
+	<script src="../../weather/cacheable/js/radar/Animator.js"></script>
+
+<noscript><link rel="stylesheet" href="weather/wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
@@ -33,10 +33,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
-<link rel="stylesheet" href="/weather/cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
-<link rel="stylesheet" href="/weather/template/wxo/css/wxo.css" />
+<link rel="stylesheet" href="../../weather/cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
+<link rel="stylesheet" href="../../weather/template/wxo/css/wxo.css" />
  
-<link rel="stylesheet" type="text/css" href="/weather/warnings/css/warnings.css" />
+<link rel="stylesheet" type="text/css" href="../../weather/warnings/css/warnings.css" />
 
 
 <ul id="wb-tphp">
@@ -61,7 +61,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
-<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="/weather/GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="../../weather/GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 </div>
 <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
 <h2>Search and menus</h2>
@@ -111,8 +111,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li>
-<li><a href="/weather/mainmenu/weather_menu_e.html">Alerts</a></li>
+		<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../weather/index_e.html">Weather information</a></li>
+<li><a href="../../weather/mainmenu/weather_menu_e.html">Alerts</a></li>
 		</ol>
 	</div>
 </div>
@@ -142,7 +142,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 property="name" id="wb-cont">Public Weather Alerts for Canada</h1>
 		<div class="row">
 	    <div class="col-md-12">
-			<p class="text-center">Click on a province or territory for the latest alerts</p><img class="thumbnail center-block img-responsive wxo-pddng-sm"  src="/weather/data/warningmap/canada_e.png" usemap="#canada" alt="Map of Canada" />
+			<p class="text-center">Click on a province or territory for the latest alerts</p><img class="thumbnail center-block img-responsive wxo-pddng-sm"  src="../../weather/data/warningmap/canada_e.png" usemap="#canada" alt="Map of Canada" />
 <map name="canada" id="canada" title="Canada">
 <area title="Alberta" alt="Alberta" shape="poly"
 coords="210,384,255,398,203,572,179,567,160,559,158,548,162,536,156,522,147,502,142,487,141,474,134,466,141,451,163,402,179,369,210,384" href="/warnings/index_e.html?prov=ab" />
@@ -516,7 +516,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 &#160;
 </td>
 </tr>
-<tr><td><a href="/weather/warnings/ottawa-report_e.html">City of Ottawa</a></td>
+<tr><td><a href="../../weather/warnings/ottawa-report_e.html">City of Ottawa</a></td>
 <td>
 &#160;
 </td>
@@ -999,7 +999,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </details></td>
 </tr>
 <tr><td class="yellowBGdarkBDR fixWidth"></td>
-<td><a href="/weather/warnings/ottawa-report_e.html">City of Ottawa</a>
+<td><a href="../../weather/warnings/ottawa-report_e.html">City of Ottawa</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
 <li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on41#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
@@ -1178,11 +1178,11 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+            <li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -1191,8 +1191,8 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
@@ -1213,7 +1213,8 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
       </section>
 	</div>
 </section>
-<section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+
+<!--<section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
 <img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
@@ -1228,7 +1229,8 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <h3 class="h5">Be Air Aware</h3>
 <img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
 </a>
-<p>Air Quality Health Index</p></section></div></section>
+<p>Air Quality Health Index</p></section></div></section> -->
+
 <div class="row pagedetails">
    <div class="col-sm-5 col-xs-12 datemod">
       <dl id="wb-dtmd">
